# Numpy

./: README.md  pyproject.toml
src/numpy_tutorial/: __init__.py  arrays.py  io_operations.py  matrices.py  tensors.py  vectors.py
src/numpy_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_arrays.py  test_matrices.py  test_tensors.py  test_vectors.py
