[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy_tutorial"
version = "0.1.0"
description = "Um repositório didático para aprendizado avançado de Numpy."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0"
]
